# project-defaults

./: .pre-commit-config.yaml  README.md  pyproject.toml  sample-python-code.py
hooks/: commit-msg.py
